--- a/drivers/platform/xiaomi/Kconfig
+++ b/drivers/platform/xiaomi/Kconfig
@@ -27,34 +27,6 @@ menu "Xiaomi board selection"
 		help
 		  Support for Xiaomi Mi Note 3
 
-	config MACH_LONGCHEER
-		bool "Longcheer board"
-		select MACH_XIAOMI_SDM660
-		help
-		  Support for Longcheer boards
-
-	config MACH_XIAOMI_LAVENDER
-		bool "Xiaomi lavender board"
-		select MACH_LONGCHEER
-		help
-		  Support for Xiaomi Redmi Note 7
-
-	config MACH_XIAOMI_TULIP
-		bool "Xiaomi tulip board"
-		select MACH_LONGCHEER
-		help
-		  Support for Xiaomi Redmi Note 6 Pro
-
-	config MACH_XIAOMI_WHYRED
-		bool "Xiaomi whyred board"
-		select MACH_LONGCHEER
-		help
-		  Support for Xiaomi Redmi Note 5 (Pro)
-
-	config MACH_XIAOMI_WAYNE
-		bool "Xiaomi wayne board"
-		select MACH_LONGCHEER
-		help
-		  Support for Xiaomi MI 6X variant
-
 endmenu
+
+source "drivers/platform/xiaomi/jason/Kconfig"
