Removed dirty tag again

--- a/arch/arm64/configs/jason_defconfig
+++ b/arch/arm64/configs/jason_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-TurKernel-LTS-Manas"
+CONFIG_LOCALVERSION="-TurKernel-LTS-Manas-AOSP"
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
